--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://2253b71d-80a3-43fe-bbf9-40547e92be38.preview.emergentagent.com
 WDS_SOCKET_PORT=443
